--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="vendorr/boxicons/css/boxicons.min.css">
-  <link rel="stylesheet" href="vendorr/animate.css/animate.min.css">
+  <link rel="stylesheet" href="boxicons.min.css">
+<!--   <link rel="stylesheet" href="vendorr/animate.css/animate.min.css"> -->
   <title>Document</title>
 </head>
 <body>
